--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rocket-league-rank-apis-client",
+  "name": "rocket-league-apis-client",
   "version": "0.1.0",
-  "description": "Client for pulling data from various rocket league rank apis",
+  "description": "Client for pulling data from various rocket league apis",
   "main": "dist/index.js",
   "scripts": {
     "build": "babel src -s -D -d dist --ignore node_modules",
