--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Client for pulling data from various rocket league apis",
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel src -s -D -d dist --ignore node_modules",
+    "build": "babel src -D -d dist --ignore node_modules",
     "lint": "eslint src test",
     "lint:staged": "lint-staged",
     "prepublish": "npm run build",
